# proface-core-mesh

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/proface/core/mesh/: __init__.py  _constants.py  container.py  helpers.py  results.py
tests/: __init__.py  test_comparison.py  test_container.py  test_from_container.py
